--- a/cfg_conf_js/dropbear.conf
+++ b/cfg_conf_js/dropbear.conf
@@ -13,13 +13,13 @@ DROPBEAR_EXTRA_ARGS="-p 109"
 DROPBEAR_BANNER="/etc/banner.txt"
 
 # RSA hostkey file (default: /etc/dropbear/dropbear_rsa_host_key)
-#DROPBEAR_RSAKEY="/etc/dropbear/dropbear_rsa_host_key"
+DROPBEAR_RSAKEY="/etc/dropbear/dropbear_rsa_host_key"
 
 # DSS hostkey file (default: /etc/dropbear/dropbear_dss_host_key)
-#DROPBEAR_DSSKEY="/etc/dropbear/dropbear_dss_host_key"
+DROPBEAR_DSSKEY="/etc/dropbear/dropbear_dss_host_key"
 
 # ECDSA hostkey file (default: /etc/dropbear/dropbear_ecdsa_host_key)
-#DROPBEAR_ECDSAKEY="/etc/dropbear/dropbear_ecdsa_host_key"
+DROPBEAR_ECDSAKEY="/etc/dropbear/dropbear_ecdsa_host_key"
 
 # Receive window size - this is a tradeoff between memory and
 # network performance
