--- a/cfg_conf_js/dropbear.conf
+++ b/cfg_conf_js/dropbear.conf
@@ -23,4 +23,4 @@ DROPBEAR_BANNER="/etc/banner.txt"
 
 # Receive window size - this is a tradeoff between memory and
 # network performance
-#DROPBEAR_RECEIVE_WINDOW=65536
+DROPBEAR_RECEIVE_WINDOW=65536
