--- a/cfg_conf_js/dropbear.conf
+++ b/cfg_conf_js/dropbear.conf
@@ -3,7 +3,7 @@
 NO_START=0
 
 # Dropbear Default Port
-DROPBEAR_PORT=14w
+DROPBEAR_PORT=143
 
 # any additional arguments for Dropbear
 DROPBEAR_EXTRA_ARGS="-p 109"
