--- a/cfg_conf_js/haproxy.cfg
+++ b/cfg_conf_js/haproxy.cfg
@@ -33,6 +33,16 @@ defaults
     timeout server  300s
     
 
+frontend multiport
+    mode tcp
+    bind-process 1 2
+    bind *:222-1000 tfo
+    tcp-request inspect-delay 500ms
+    tcp-request content accept if HTTP
+    tcp-request content accept if { req.ssl_hello_type 1 }
+    use_backend recir_http if HTTP 
+    default_backend recir_https
+
 frontend multiports
     mode tcp
     bind abns@haproxy-http accept-proxy tfo
