--- a/cfg_conf_js/dropbear.conf
+++ b/cfg_conf_js/dropbear.conf
@@ -6,7 +6,7 @@ NO_START=0
 DROPBEAR_PORT=110
 
 # any additional arguments for Dropbear
-DROPBEAR_EXTRA_ARGS="-p 109 -p 143"
+DROPBEAR_EXTRA_ARGS="-p 109"
 
 # specify an optional banner file containing a message to be
 # sent to clients before they connect, such as "/etc/banner.txt"
