--- a/cfg_conf_js/haproxy.cfg
+++ b/cfg_conf_js/haproxy.cfg
@@ -48,7 +48,7 @@ frontend ssl
     # bind-process 1 # <-- BARIS INI DIHAPUS
     
     # Binding untuk port-port non-SSL
-    # bind *:80 tfo
+    bind *:80 tfo
     bind *:55 tfo
     bind *:8080 tfo 
     bind *:8880 tfo
