--- a/cfg_conf_js/haproxy.cfg
+++ b/cfg_conf_js/haproxy.cfg
@@ -1,14 +1,11 @@
 # CFG LOADBALANCER LUNATIC PROJECT 
-# Diperbaiki untuk HAProxy 2.8+ (Ubuntu 24.04)
-
 global       
     stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
     stats timeout 1d
 
-    # Log diaktifkan jika diperlukan
-    # log /dev/log local0
-    # log /dev/log local1 notice
-    # log /dev/log local0 info
+#   log /dev/log local0
+#   log /dev/log local1 notice
+#   log /dev/log local0 info
     
     tune.h2.initial-window-size 2147483647
     tune.ssl.default-dh-param 2048
@@ -20,7 +17,6 @@ global
     group haproxy
     daemon
 
-    # Pengaturan SSL/TLS
     ssl-default-bind-ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
     ssl-default-bind-ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256
     ssl-default-bind-options no-sslv3 no-tlsv10 no-tlsv11
@@ -36,6 +32,15 @@ defaults
     timeout client  300s
     timeout server  300s
     
+frontend multiport
+    mode tcp
+    bind-process 1 2
+    bind *:222-1000 tfo
+    tcp-request inspect-delay 500ms
+    tcp-request content accept if HTTP
+    tcp-request content accept if { req.ssl_hello_type 1 }
+    use_backend recir_http if HTTP 
+    default_backend recir_https
 
 frontend multiports
     mode tcp
@@ -44,20 +49,15 @@ frontend multiports
 
 frontend ssl
     mode tcp
-    # Opsi bind-process dihapus karena tidak kompatibel dengan HAProxy 2.8+
-    # bind-process 1 # <-- BARIS INI DIHAPUS
-    
-    # Binding untuk port-port non-SSL
+    bind-process 1
     bind *:80 tfo
     bind *:55 tfo
     bind *:8080 tfo 
     bind *:8880 tfo
-    bind *:2095 tfo # Port ini hanya muncul sekali sekarang
+    bind *:2095 tfo
     bind *:2082 tfo
     bind *:2086 tfo
-    # bind *:2095 tfo # <-- Baris duplikat ini dihapus
-
-    # Binding untuk SSL dengan SNI
+    bind *:2095 tfo
     bind abns@haproxy-https accept-proxy ssl crt /etc/haproxy/hap.pem alpn h2,http/1.1 tfo
     
     tcp-request inspect-delay 500ms
@@ -74,8 +74,6 @@ frontend ssl
     use_backend FTVPN if { path_reg -i ^\/(.*) }
     use_backend BOT_FTVPN if this_payload
     default_backend CHANNEL_FTVPN
-
-# === BACKENDS ===
 
 backend recir_https_www
     mode tcp
@@ -106,5 +104,3 @@ backend recir_http
 backend recir_https
     mode tcp
     server loopback-for-https abns@haproxy-https send-proxy-v2 check
-
-
